[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=3]
[ext_resource path="res://Objects/coin.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://UI/Fonts/LcdSolid-VPzB.ttf"

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="PlayerUI" type="Control"]
margin_right = 60.0
margin_bottom = 11.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinUI" type="Sprite" parent="."]
position = Vector2( 7, 32 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 4 )
vframes = 2
hframes = 6

[node name="CoinCounter" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 56.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
